--- a/Projecto Campanhas vf.ipynb
+++ b/Projecto Campanhas vf.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e9e72ddf",
    "metadata": {},
    "outputs": [
@@ -30,53 +30,21 @@
       "================================================================================\n",
       "\n",
       "1. CONFIGURAÇÃO INICIAL E CONSULTAS AOS DADOS\n",
-      "\n",
-      "1. CONFIGURAÇÃO\n",
-      "✓ Data Atual: 2026-02-23\n",
+      "✓ Data Atual: 2026-02-27\n",
       "✓ Mês Atual: 202602\n",
       "✓ Mês Anterior: 202601\n",
       "✓ Campanha Prioritária: iXS_PCDPMTOP\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\COTAGO\\AppData\\Local\\Temp\\ipykernel_18360\\1992802798.py:1100: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df_baseenvio = pd.read_sql(\"SELECT DISTINCT * FROM #BaseEnvio\", conn)\n",
-      "C:\\Users\\COTAGO\\AppData\\Local\\Temp\\ipykernel_18360\\1992802798.py:1102: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df_CCR = pd.read_sql(\"select NIF as param1,  Montante-DividaCRC as param3,DividaCRC as param11,Montante as param12,MM-Seguro as param13,Prazo as param14,TAN as param15,TAEG  as param16,Seguro as param17,MTIC as param18, MM as param21, nif as external_id FROM #TabelaFinalCCR\", conn)\n",
-      "C:\\Users\\COTAGO\\AppData\\Local\\Temp\\ipykernel_18360\\1992802798.py:1550: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df_resultados_campanha  = pd.read_sql(\"SELECT DISTINCT * FROM #ResultadosCampanhas WHERE iTipoCampanha IS NOT NULL and iTipoCampanha <> 'iXS_RUC_R+1'\", conn)\n",
-      "C:\\Users\\COTAGO\\AppData\\Local\\Temp\\ipykernel_18360\\1992802798.py:1557: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df_envios = pd.read_sql(\"SELECT DISTINCT * FROM #Envios WHERE iTipoCampanha IS NOT NULL and iTipoCampanha <> 'iXS_RUC_R+1'\", conn)  # Exemplo: Substituir com uso do pyodbc/pandas read_sql\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ BaseEnvio carregada com 421,218 registros.\n",
-      "✓ ResultadosCampanha carregada com 708 registros.\n",
-      "✓ Envios carregados com 708 registros.\n",
-      "✓ Plano de campanhas carregado com 28 campanhas.\n",
-      "✓ Campanhas para exportar hoje: 1\n",
-      "✓ Campanhas futuras: 4\n",
-      "✓ Campanhas passadas ignoradas: 23\n",
-      "\n",
-      "Resumo da inicialização:\n",
-      "  - #BaseEnvio: 421218 clientes carregados.\n",
-      "  - #ResultadosCampanha: 708 registros carregados.\n",
-      "  - #Envios: 708 registros carregados.\n",
-      "  - Plano de Campanhas: 28 campanhas ativas no plano.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\COTAGO\\AppData\\Local\\Temp\\ipykernel_18360\\1992802798.py:1619: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df_resultados = pd.read_sql(\"SELECT DISTINCT * FROM #Resultados\", conn)  # Exemplo: Substituir com uso do pyodbc/pandas read_sql\n"
+     "ename": "OperationalError",
+     "evalue": "('08001', '[08001] [Microsoft][ODBC SQL Server Driver][DBNETLIB]O SQL Server não existe ou o acesso foi recusado. (17) (SQLDriverConnect); [08001] [Microsoft][ODBC SQL Server Driver][DBNETLIB]ConnectionOpen (Connect()). (53)')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mOperationalError\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 65\u001b[39m\n\u001b[32m     47\u001b[39m \u001b[38;5;66;03m# =============================================================================\u001b[39;00m\n\u001b[32m     48\u001b[39m \u001b[38;5;66;03m# 1.1 Queries para Carregar os Dados\u001b[39;00m\n\u001b[32m     49\u001b[39m \u001b[38;5;66;03m# =============================================================================\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     55\u001b[39m \u001b[38;5;66;03m# Substitua pela QUERY específica para obter a base de envio.\u001b[39;00m\n\u001b[32m     56\u001b[39m \u001b[38;5;66;03m# Exemplo de query:\u001b[39;00m\n\u001b[32m     58\u001b[39m conn_str = (\n\u001b[32m     59\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mDriver=\u001b[39m\u001b[33m{\u001b[39m\u001b[33mSQL Server};\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     60\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mServer=Diomedes;\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     61\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mDatabase=tempdb;\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     62\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mtrusted_connection=yes;\u001b[39m\u001b[33m'\u001b[39m \n\u001b[32m     63\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m65\u001b[39m conn = \u001b[43mpyodbc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconn_str\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     66\u001b[39m cursor = conn.cursor()\n\u001b[32m     68\u001b[39m query_base_envio = \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     69\u001b[39m \u001b[33m/* =========================================================\u001b[39m\n\u001b[32m     70\u001b[39m \u001b[33m   QUERY SIMPLIFICADA - CAMPANHAS DE ELEGIBILIDADE\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m   1129\u001b[39m \n\u001b[32m   1130\u001b[39m \u001b[33m\"\"\"\u001b[39m\n",
+      "\u001b[31mOperationalError\u001b[39m: ('08001', '[08001] [Microsoft][ODBC SQL Server Driver][DBNETLIB]O SQL Server não existe ou o acesso foi recusado. (17) (SQLDriverConnect); [08001] [Microsoft][ODBC SQL Server Driver][DBNETLIB]ConnectionOpen (Connect()). (53)')"
      ]
     }
    ],
@@ -100,7 +68,7 @@
     "# Configurações gerais\n",
     "\n",
     "PATH_PLANO = r'C:\\Users\\COTAGO\\Desktop\\Base\\plano.csv'\n",
-    "FOLDER_OUTPUT = r'C:\\Users\\COTAGO\\Desktop\\Base\\Export_Campanhas'\n",
+    "FOLDER_OUTPUT = r'C:\\Users\\gonco\\Downloads\\Export_Campanhas'\n",
     "SEPARADOR = ';'\n",
     "ENCODING = 'utf-8'\n",
     "CAMPANHA_PRIORITARIA = 'iXS_PCDPMTOP'  # Campanha prioritária\n",
@@ -1752,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f6927397",
    "metadata": {},
    "outputs": [
@@ -1761,17 +1729,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "1. ESCASSEZ & OVERLAP DAS CAMPANHAS FUTURAS (MÊS CORRENTE)\n",
-      "\n",
-      "✓ Escassez calculada (campanhas futuras do mês):\n",
-      "             campanha  necessidade  elegiveis_totais   escassez  status  dias_ate       data\n",
-      "iXS_RUC_PlafondMinimo         1020                 8 127.500000 CRÍTICO         0 24/02/2026\n",
-      " iXS_Terminados_PA_2T         5000               227  22.026432 CRÍTICO         0 24/02/2026\n",
-      "  iXS_PCD_Inativos_2T         4000              3709   1.078458 CRÍTICO         0 24/02/2026\n",
-      "  iXS_PCD_Inativos_1T         4060             19395   0.209332   BAIXO         0 24/02/2026\n",
-      "\n",
-      "✓ Overlap calculado (campanhas do mês)\n",
-      "✓ Escassez e prioridade adicionadas ao #Plano (mês corrente).\n"
+      "2. ESCASSEZ & OVERLAP DAS CAMPANHAS FUTURAS (MÊS CORRENTE)\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m2. ESCASSEZ & OVERLAP DAS CAMPANHAS FUTURAS (MÊS CORRENTE)\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# 1) Normalizar datas no plano\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m df_plano[\u001b[33m'\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mpd\u001b[49m.to_datetime(df_plano[\u001b[33m'\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m'\u001b[39m], dayfirst=\u001b[38;5;28;01mTrue\u001b[39;00m, errors=\u001b[33m'\u001b[39m\u001b[33mcoerce\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# 2) Filtrar apenas campanhas do mês atual (hoje até fim do mês)\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Se nenhuma campanha tiver data neste período, pega todas as futuras\u001b[39;00m\n\u001b[32m     15\u001b[39m fim_mes = hoje + pd.offsets.MonthEnd(\u001b[32m0\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'pd' is not defined"
      ]
     }
    ],
@@ -1836,12 +1806,12 @@
     "    # 2. Remover clientes do mês anterior (EXCETO para campanhas em CAMPANHAS_SEM_BLOQUEIO_MES_ANTERIOR)\n",
     "    df_elegivel = df_baseenvio[\n",
     "        (df_baseenvio[campanha] == 1) &  # É elegível para esta campanha\n",
-    "        (df_baseenvio['IdMesUltimaCampanha'] != mes_atual)  # Não contactado este mês (SEMPRE)\n",
+    "        (df_baseenvio['IdMesUltimaCampanha'] != str(mes_atual))  # Não contactado este mês (SEMPRE)\n",
     "    ]\n",
     "    \n",
     "    # Filtro adicional: Bloquear mês anterior, EXCETO se campanha está na lista de exceções\n",
     "    if campanha not in CAMPANHAS_SEM_BLOQUEIO_MES_ANTERIOR:\n",
-    "        df_elegivel = df_elegivel[df_baseenvio['IdMesUltimaCampanha'] != mes_anterior]\n",
+    "        df_elegivel = df_elegivel[df_elegivel['IdMesUltimaCampanha'] != str(mes_anterior)]\n",
     "    \n",
     "    elegiveis_totais = len(df_elegivel)\n",
     "    escassez = (necessidade / elegiveis_totais) if elegiveis_totais > 0 else 1.0\n",
@@ -1893,11 +1863,11 @@
     "    # Filtrar elegíveis com bloqueio de IdMesUltimaCampanha\n",
     "    df_elegivel_c = df_baseenvio[\n",
     "        (df_baseenvio[c] == 1) &  # É elegível\n",
-    "        (df_baseenvio['IdMesUltimaCampanha'] != mes_atual)  # Não contactado este mês\n",
+    "        (df_baseenvio['IdMesUltimaCampanha'] != str(mes_atual))  # Não contactado este mês\n",
     "    ]\n",
     "    # Bloquear mês anterior, EXCETO se campanha está em CAMPANHAS_SEM_BLOQUEIO_MES_ANTERIOR\n",
     "    if c not in CAMPANHAS_SEM_BLOQUEIO_MES_ANTERIOR:\n",
-    "        df_elegivel_c = df_elegivel_c[df_baseenvio['IdMesUltimaCampanha'] != mes_anterior]\n",
+    "        df_elegivel_c = df_elegivel_c[df_elegivel_c['IdMesUltimaCampanha'] != str(mes_anterior)]\n",
     "    \n",
     "    sets_elegiveis[c] = set(df_elegivel_c['NIF'].tolist())\n",
     "\n",
@@ -3489,7 +3459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3503,7 +3473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
